# raindrop

./: .gitignore  .gitmodules  .sconsign.dblite  CMakeLists.txt  README  README.md  SConstruct  config-release.ini  config.ini  config.ld  config.lua  convert.bat  credits.txt  dc  dotcur.sln  game_readme.txt  pch.sh  premake4.lua  sjis.txt
GameData/Scripts/: AnimationFunctions.lua  FixedObjects.lua  FrameInterpolator.lua  Histogram.lua  box.lua  debug.lua  fixed_objects.lua  frame_interpolator.lua  librd.lua  noteskin_defs.lua  textureatlas.lua  utils.lua
SOIL/: SOIL.c  SOIL.h  stb_image_aug.c
cmake/Modules/: FindFFmpeg.cmake  FindGLFW3.cmake  FindMPG123.cmake  FindOggVorbis.cmake  FindPortaudio.cmake  FindRmlUi.cmake  FindSndfile.cmake  FindSoxr.cmake  FindSqlite3.cmake
dotcur/: dotcur.vcxproj  dotcur.vcxproj.filters
ext-libs/Debug/: Ogg_d.lib  RocketControls.exp  RocketControls.lib  RocketControlsLua.exp  RocketControlsLua.lib  RocketCore.exp  RocketCore.lib  RocketCoreLua.exp  RocketCoreLua.lib  RocketDebugger.exp  RocketDebugger.lib  Vorbis_d.lib  glew32d.lib  glfw3.idb  glfw3.lib  libmpg123.lib  libogg.lib  libpng16.lib  libsndfile-1.lib  libsoxr.lib  libvorbis.lib  libvorbisfile.lib  ogg_d.idb  portaudio_x86.exp  portaudio_x86.idb  portaudio_x86.ilk  portaudio_x86.lib  soxr.lib  vorbis_d.idb
ext-libs/include/: mpg123mingw.h  sndfile.h
ext-src/: jsoncpp.cpp  lua.c  randint.h
ext-src/json/: json.h
include/: Interruptible.h  TextAndFileUtil.h  rmath.h
include/game/: Converter.h  Easing.h  GameConstants.h  Gauge.h  NoteLoader7K.h  NoteTransformations.h  PlayerChartState.h  ScoreKeeper7K.h  ScoreSystem.h  SingleSongLoad.h  Song.h  Timing.h  TimingWindows.h  TrackNote.h  VSRGMechanics.h  raindrop-common.h
include/sndio/: AudioSourceMP3.h  AudioSourceSFM.h  Audiofile.h  IMixer.h
msvc/: packages.config  raindrop.sln  raindrop.vcxproj  raindrop.vcxproj.filters
project/: ClassDiagram.cd  packages.config  raindrop.sln  vs10.filters  vs10.sln  vs10.vcxproj  vs10.vcxproj.filters
rd-include/: Utility.h  fs.h  glm.h  rmath.h
rd-include/sndio/: AudioSourceMP3.h  AudioSourceOGG.h  Audiofile.h  IMixer.h
scripter/: api.cpp  main.cpp
soil/: SOIL.c
src/: ActorBarline.cpp  ActorBarline.h  ActorJudgement.cpp  ActorJudgement.h  ActorJudgment.cpp  ActorJudgment.h  ActorLifebar.cpp  ActorLifebar.h  Application.cpp  Application.h  ArcadeMechanics.cpp  Audio.cpp  Audio.h  AudioSourceMP3.cpp  AudioSourceMP3.h  AudioSourceOGG.cpp  AudioSourceOGG.h  AudioSourceOJM.cpp  AudioSourceOJM.h  AudioSourceSFM.cpp  AudioSourceSFM.h  AudioSourceWAV.cpp  AudioSourceWAV.h  Audiofile.cpp  Audiofile.h  BackgroundAnimation.cpp  BackgroundAnimation.h  BindingsManager.h  BitmapFont.cpp  BitmapFont.h  Configuration.cpp  Configuration.h  Convert.cpp  ConvertToBMS.cpp  Converter.h  Directory.cpp  Directory.h  Drawable.h  Easing.cpp  Easing.h  (+168 more)
src-backend/: Audio.cpp  Audio.h  BitmapFont.h  ErrorReporting.cpp  Font.cpp  Font.h  GraphicalString.cpp  IRenderContext.h  ImageList.cpp  ImageList.h  ImageLoader.cpp  ImageLoader.h  Rendering.cpp  Rendering.h  Sprite.cpp  Sprite.h  TruetypeFont.cpp  TruetypeFont.h  VBO.h  VideoPlayback.cpp  VideoPlayback.h  backend-pch.h
src-game/: Application.cpp  Application.h  ArcadeMechanics.cpp  BackgroundAnimation.h  Drawable.h  Game.h  GameState.cpp  GameState.h  GameStateLua.cpp  GameWindow.h  IPC.cpp  Logging.cpp  Noteskin.cpp  Noteskin.h  NoteskinLua.cpp  OffsetDatabase.cpp  OffsetDatabase.h  PlayerContext.cpp  PlayerContext.h  Profile.h  RaindropLua.cpp  Replay7K.cpp  Replay7K.h  SceneEnvironment.cpp  SceneEnvironmentLua.cpp  Screen.cpp  ScreenGameplay7K.cpp  ScreenGameplay7K.h  ScreenGameplay7KLua.cpp  ScreenGameplay7K_Mechanics.cpp  ScreenLoading.cpp  ScreenMainMenu.cpp  ScreenMainMenu.h  ScreenSelectMusic.cpp  ScreenSelectMusic.h  ShaderLua.cpp  SongDatabase.cpp  SongList.cpp  SongList.h  SongLoader.cpp  (+7 more)
src-gamecore/: Convert.cpp  ConvertToBMS.cpp  Converter.h  Easing.cpp  Easing.h  GameConstants.h  LuaManager.cpp  LuaManager.h  NPSGraph.cpp  NoteLoader7K.h  NoteLoaderBMS.cpp  NoteLoaderBMSON.cpp  NoteLoaderFTB.cpp  NoteLoaderOJN.cpp  NoteLoaderOM.cpp  NoteLoaderSM.cpp  NoteTransformations.cpp  NoteTransformations.h  PlayerChartState.cpp  PlayerChartState.h  RowifiedDifficulty7K.cpp  ScoreKeeper7K.cpp  ScoreKeeper7K.h  ScoreKeeper7K_Lua.cpp  ScoreKeeper7K_init.cpp  ScoreKeeper7K_o2jam.cpp  SingleSongLoad.cpp  SingleSongLoad.h  Song.h  Song7K.cpp  Song7K.h  SongTiming.cpp  TrackNote.cpp  TrackNote.h  Transformation.cpp  VSRGMechanics.cpp  gamecore-pch.h  raindrop-common.h
src-sndio/: AudioSourceMP3.cpp  AudioSourceOGG.cpp  AudioSourceOJM.cpp  AudioSourceOJM.h  AudioSourceSFM.cpp  Audiofile.cpp  av-io-common-pch.h
src-thirdparty/: LIBRARY VERSIONS.txt
src-thirdparty/simpleini/: SimpleIni.h
src-thirdparty/stb/: stb_truetype.h
src-util/: Conversion.cpp  Interruptible.cpp  Utility.cpp
src-util/ext/: sha256.cpp
src/client/: Application.cpp  Application.h  BackgroundAnimation.cpp  Configuration.cpp  Configuration.h  Game.h  GameState.cpp  GameState.h  GameplayParameters7K.cpp  IPC.cpp  Logging.cpp  LuaManager.cpp  Noteskin.cpp  Noteskin.h  OffsetDatabase.cpp  PlayerContext.cpp  PlayerContext.h  PlayscreenParameters.h  Profile.cpp  RaindropRocketInterface.h  Replay7K.cpp  Replay7K.h  SceneEnvironment.cpp  SceneEnvironment.h  SceneEnvironmentLua.cpp  ScoreDatabase.cpp  Screen.cpp  Screen.h  ScreenCustom.cpp  ScreenEvaluation7K.cpp  ScreenEvaluation7K.h  ScreenGameplay7K.cpp  ScreenGameplay7K.h  ScreenGameplay7K_Setup.cpp  ScreenLoading.cpp  ScreenMainMenu.cpp  ScreenSelectMusic.cpp  ScreenVideoTest.cpp  SongDatabase.cpp  SongList.cpp  (+7 more)
src/converter/: converter.cpp
src/game/: ArcadeMechanics.cpp  Convert.cpp  ConvertToBMS.cpp  Easing.cpp  Gauge.cpp  NPSGraph.cpp  NoteLoaderBMS.cpp  NoteLoaderBMSON.cpp  NoteLoaderFTB.cpp  NoteLoaderOJN.cpp  NoteLoaderOM.cpp  NoteLoaderSM.cpp  NoteTransformations.cpp  NoteWriterBMS.cpp  NoteWriterOsumania.cpp  (+11 more)
tests/: FilesTests.cpp  MechanicsTests.cpp  NoteskinTests.cpp  OsuManiaTests.cpp  TestSetA.cpp  main.cpp
(+295 files in other folders)
